changed px to vh

--- a/cmimetexchange.html
+++ b/cmimetexchange.html
@@ -5,7 +5,7 @@
 	<style>
 		table {
 				        width: 100%;
-				        height: 280px;
+				        height: 280vh;
 				        border-collapse: collapse;
 				        padding-bottom: 10px;
    		}
